<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sacrious.nativapps.ui.view.business.BusinessFragment"
    >

  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <android.support.design.widget.TextInputLayout
        android:id="@+id/title_txt_input_ly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextInputLayoutStandard"
        >

      <android.support.design.widget.TextInputEditText
          android:drawableLeft="@drawable/ic_business"
          android:drawableStart="@drawable/ic_business"
          android:hint="@string/title"
          android:inputType="textPersonName"
          style="@style/TextInputEditTextStandard"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/description_txt_input_ly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_txt_input_ly"
        style="@style/TextInputLayoutStandard"
        >

      <android.support.design.widget.TextInputEditText
          android:drawableLeft="@drawable/ic_description"
          android:drawableStart="@drawable/ic_description"
          android:hint="@string/description"
          android:inputType="text"
          style="@style/TextInputEditTextStandard"
          />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/label_people"
        android:text="@string/people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_txt_input_ly"
        style="@style/LabelIndicator"
        />
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/people_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_people"
        style="@style/SpinnerStandard"
        />

    <TextView
        android:id="@+id/label_companies"
        android:text="@string/companies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/people_sp"
        style="@style/LabelIndicator"
        />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/company_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_companies"
        style="@style/SpinnerStandard"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/value_txt_input_ly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_sp"
        style="@style/TextInputLayoutStandard"
        >

      <android.support.design.widget.TextInputEditText
          android:drawableLeft="@drawable/ic_money"
          android:drawableStart="@drawable/ic_money"
          android:hint="@string/value"
          android:inputType="number"
          style="@style/TextInputEditTextStandard"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/date_txt_input_ly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_txt_input_ly"
        style="@style/TextInputLayoutStandard"
        >

      <android.support.design.widget.TextInputEditText
          android:drawableLeft="@drawable/ic_date"
          android:drawableStart="@drawable/ic_date"
          android:focusable="false"
          android:hint="@string/date"
          android:inputType="date"
          style="@style/TextInputEditTextStandard"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/status_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/condensed_horizontal_margin"
        android:layout_marginStart="@dimen/condensed_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_txt_input_ly"
        />
  </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>